objects/Projections__c.object
<CustomObject>
    <fields>
        <fullName>Max_Prob__c</fullName>
        <formula>MAX( 
Month_1_Prob_del__c , 
Month_2_Prob__c,
Month_3_Prob__c,
Month_4_Prob__c,
Month_5_Prob__c,
Month_6_Prob__c,
Month_7_Prob__c,
Month_8_Prob__c,
Month_9_Prob__c,
Month_10_Prob__c,
Month_11_Prob__c,
Month_12_Prob__c,
Month_13_Prob__c,
Month_14_Prob__c,
Month_15_Prob__c,
Month_16_Prob__c,
Month_17_Prob__c,
Month_18_Prob__c,
Month_19_Prob__c,
Month_20_Prob__c,
Month_21_Prob__c,
Month_22_Prob__c,
Month_23_Prob__c,
Month_24_Prob__c

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Prob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month_10_Prob__c</fullName>
        <label>Month 10 Prob.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month_10__c</fullName>
        <formula>CASE( Month_1__c , 
"Jan", "Oct", 
"Feb", "Nov",
"Mar", "Dec",
"Apr", "Jan",
"May", "Feb",
"Jun", "Mar",
"Jul", "Apr",
"Aug", "May",
"Sep", "Jun",
"Oct", "Jul",
"Nov", "Aug",
"Dec","Sep",
" ")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_11_Prob__c</fullName>
        <label>Month 11 Prob.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month_11__c</fullName>
        <formula>CASE( Month_1__c , 
"Jan", "Nov", 
"Feb", "Dec",
"Mar", "Jan",
"Apr", "Feb",
"May", "Mar",
"Jun", "Apr",
"Jul", "May",
"Aug", "Jun",
"Sep", "Jul",
"Oct", "Aug",
"Nov", "Sep",
"Dec","Oct",
" ")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 11</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_12_Prob__c</fullName>
        <label>Month 12 Prob.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month_12__c</fullName>
        <formula>CASE( Month_1__c , 
"Jan", "Dec", 
"Feb", "Jan",
"Mar", "Feb",
"Apr", "Mar",
"May", "Apr",
"Jun", "May",
"Jul", "Jun",
"Aug", "Jul",
"Sep", "Aug",
"Oct", "Sep",
"Nov", "Oct",
"Dec","Nov",
" ")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month 12</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_1_Prob_del__c</fullName>
        <label>Month 1 Prob.</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>N_B__c</fullName>
        <formula>"Only changes to the first 18 months of projections can be tracked by the system within the Projection History related list and dependent reports."</formula>
        <label>N.B.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projections</relationshipLabel>
        <relationshipName>Projections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Projection</label>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Projections Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>